--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: scala
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION compile
+  - sbt ++$TRAVIS_SCALA_VERSION clean update compile
 scala:
   - 2.11.0-SNAPSHOT
 jdk:
@@ -9,3 +9,6 @@ jdk:
 notifications:
   email:
     - adriaan.moors@typesafe.com
+
+# if we get weird timeouts, see https://github.com/spray/spray/pull/233
+# 'set concurrentRestrictions in Global += Tags.limit(Tags.Test, 1)'
