--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,10 @@
 language: scala
 
-env:
-  global:
-    - PUBLISH_JDK=openjdk6 # admin/build.sh only publishes when running on this jdk
-# Don't commit sensitive files, instead commit a version encrypted with $SECRET,
-# this environment variable is encrypted with this repo's private key and stored below:
-# (See http://docs.travis-ci.com/user/environment-variables/#Secure-Variables.)
-    - secure: "KpKvQvUQNsF+o74lndXl+zDGU8+A686ltndldlwDhNiSYF/PJ9RIXembsRh+B4ureo/Aa9UBL7vE6d265DRpir2o6JQ3jcU6e4djfqkvmXuDpBlcd3rJXtKuGYQyE5cm2h3/ZFl+0RmYm+fGSieWBAo+A3uvAVuq8qTu6PY8nMU="
+script: sbt clean update test publishLocal
 
-script:
-  - admin/build.sh
-scala:
-  - 2.11.0
 jdk:
   - openjdk6
   - openjdk7
-notifications:
-  email:
-    - adriaan.moors@typesafe.com
 
-# if we get weird timeouts, see https://github.com/spray/spray/pull/233
-# 'set concurrentRestrictions in Global += Tags.limit(Tags.Test, 1)'
+notifications:
+  email: adriaan.moors@typesafe.com
