redo how crossScalaVersions works
the old scheme was: run tests on openjdk7, but only publish (for all
Scala versions) from openjdk6

this is no longer appropriate now that Scala 2.12.0-M2 requires Java 8.
now we want to publish for older Scala versions using JDK 6, but
newer versions (M2 and above) using JDK 8. this commit does that.

currently Travis doesn't offer OpenJDK 8, so we use Oracle.  leaving
our JDK 6 setting as "openjdk6" since that's what it's historically
been so why rock the boat.

what happened to running tests on JDK 7?  well, neither Lukas nor I
knows why it was even doing that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ language: scala
 
 env:
   global:
-    - PUBLISH_JDK=openjdk6
     # PGP_PASSPHRASE
     - secure: "XLe/gZXrGwJlKCgAUoEUIHwoh8js0IdlIazwUd5KKssZMQkPg4VfC5LLPl8iXCYIRe2JrgmD56b7eseiZF9kMxa1Rsz8fSMY0v3A0qwxRjbsxVQ2NqEvdq+TNOAhjo/OmPnipvTcDdAyq68Ca4nTSBtfBpy5t6X3Z4UIl8CWLdw="
     # SONA_USER
@@ -17,7 +16,7 @@ script: admin/build.sh
 
 jdk:
   - openjdk6
-  - openjdk7
+  - oraclejdk8
 
 notifications:
   email: adriaan.moors@typesafe.com
