new 1.1.x branch for Scala 2.12 only
2.11 development is winding down, so let's declare the 1.0.x
series to be 2.11 only, and start a new 1.1.x series for 2.12+

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ env:
 script: admin/build.sh
 
 jdk:
-  - openjdk6
   - oraclejdk8
 
 notifications:
-  email: adriaan.moors@typesafe.com
+  email:
+    - adriaan.moors@lightbend.com
+    - seth.tisue@lightbend.com
