--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-# opt-in to Travis's newer/faster container-based infrastructure
-sudo: false
-
 language: scala
 
 env:
@@ -15,7 +12,7 @@ env:
 script: admin/build.sh
 
 jdk:
-  - oraclejdk8
+  - openjdk8
   - openjdk11
 
 notifications:
